# learn-gl

./: CMakeLists.txt  Readme.md
chapter1/: CMakeLists.txt
chapter1-Qt/: CMakeLists.txt
chapter1-Qt/inc/: myWidget.hpp
chapter1-Qt/src/: myWidget.cpp
chapter1/src/: main.cpp
chapter10/: CMakeLists.txt
chapter10-Qt/: CMakeLists.txt
chapter10-Qt/inc/: myWidget.hpp
chapter10-Qt/src/: myWidget.cpp  shader.vs
chapter10/src/: main.cpp  shader.fs
chapter11/: CMakeLists.txt
chapter11-Qt/: CMakeLists.txt
chapter11-Qt/inc/: myWidget.hpp
chapter11-Qt/src/: myWidget.cpp
chapter11/src/: main.cpp
chapter12/: CMakeLists.txt
chapter12/src/: main.cpp  shader.cpp  shader.h
chapter13-Qt/: CMakeLists.txt
chapter14/: CMakeLists.txt
chapter14/src/: main.cpp  object.vs  shader.cpp  shader.h
chapter2/: CMakeLists.txt
chapter2-Qt/: CMakeLists.txt
chapter2-Qt/inc/: myWidget.hpp
chapter2-Qt/src/: myWidget.cpp
chapter2/src/: glad.c  main.cpp
chapter3/: CMakeLists.txt
chapter3-Qt/: CMakeLists.txt
chapter3-Qt/src/: myWidget.cpp
chapter3/src/: main.cpp
chapter4/: CMakeLists.txt
chapter4-Qt/: CMakeLists.txt
chapter4-Qt/inc/: myWidget.hpp  shader.h
chapter4-Qt/src/: myWidget.cpp
chapter4/inc/: shader.h
chapter4/src/: main.cpp  shader.cpp  shader.fs
chapter5/: CMakeLists.txt
chapter5-Qt/: CMakeLists.txt
chapter5-Qt/inc/: myWidget.hpp
chapter5-Qt/src/: myWidget.cpp  shader.cpp  shader.fs  shader.vs
chapter5/src/: main.cpp  shader.cpp  shader.fs  shader.h
chapter6/: CMakeLists.txt
chapter6-Qt/: CMakeLists.txt
chapter6-Qt/inc/: myWidget.hpp
chapter6-Qt/src/: myWidget.cpp  shader.fs  shader.vs
chapter6/src/: main.cpp  shader.cpp
chapter7/: CMakeLists.txt
chapter7-Qt/: CMakeLists.txt
chapter7-Qt/src/: myWidget.cpp  shader.vs
chapter7/src/: main.cpp  shader.fs
chapter8/: CMakeLists.txt
chapter8-Qt/: CMakeLists.txt
chapter8-Qt/inc/: myWidget.hpp  shader.h
chapter8-Qt/src/: main.cpp  myWidget.cpp
chapter8/src/: main.cpp
chapter9/: CMakeLists.txt
chapter9-Qt/: CMakeLists.txt
chapter9-Qt/src/: myWidget.cpp  shader.cpp
chapter9/src/: main.cpp  shader.h
